@@ -3,7 +3,8 @@
 
 // 2000-08-23 Benjamin Kosnik <bkoz@cygnus.com>
 
-// Copyright (C) 2000, 2001, 2002, 2003, 2007, 2009 Free Software Foundation
+// Copyright (C) 2000, 2001, 2002, 2003, 2007, 2009, 2010, 2011
+// Free Software Foundation
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
 // software; you can redistribute it and/or modify it under the
@@ -43,23 +44,35 @@ void test01()
   int 			size = 23;
   char  e_lit_base[96] __attribute__((aligned(__alignof__(ext_type)))) =
   {
-    0x00, 0x00, 0x00, 0x62, 0x00, 0x00, 0x00, 0x6c, 0x00, 0x00, 0x00, 0x61,
-    0x00, 0x00, 0x00, 0x63, 0x00, 0x00, 0x00, 0x6b, 0x00, 0x00, 0x00, 0x20,
-    0x00, 0x00, 0x00, 0x70, 0x00, 0x00, 0x00, 0x65, 0x00, 0x00, 0x00, 0x61,
-    0x00, 0x00, 0x00, 0x72, 0x00, 0x00, 0x00, 0x6c, 0x00, 0x00, 0x00, 0x20,
-    0x00, 0x00, 0x00, 0x6a, 0x00, 0x00, 0x00, 0x61, 0x00, 0x00, 0x00, 0x73,
-    0x00, 0x00, 0x00, 0x6d, 0x00, 0x00, 0x00, 0x69, 0x00, 0x00, 0x00, 0x6e,
-    0x00, 0x00, 0x00, 0x65, 0x00, 0x00, 0x00, 0x20, 0x00, 0x00, 0x00, 0x74,
-    0x00, 0x00, 0x00, 0x65, 0x00, 0x00, 0x00, 0x61, 0x00, 0x00, 0x00, 0xa0     
+    char(0x00), char(0x00), char(0x00), char(0x62), char(0x00), char(0x00),
+    char(0x00), char(0x6c), char(0x00), char(0x00), char(0x00), char(0x61),
+    char(0x00), char(0x00), char(0x00), char(0x63), char(0x00), char(0x00),
+    char(0x00), char(0x6b), char(0x00), char(0x00), char(0x00), char(0x20),
+    char(0x00), char(0x00), char(0x00), char(0x70), char(0x00), char(0x00),
+    char(0x00), char(0x65), char(0x00), char(0x00), char(0x00), char(0x61),
+    char(0x00), char(0x00), char(0x00), char(0x72), char(0x00), char(0x00),
+    char(0x00), char(0x6c), char(0x00), char(0x00), char(0x00), char(0x20),
+    char(0x00), char(0x00), char(0x00), char(0x6a), char(0x00), char(0x00),
+    char(0x00), char(0x61), char(0x00), char(0x00), char(0x00), char(0x73),
+    char(0x00), char(0x00), char(0x00), char(0x6d), char(0x00), char(0x00),
+    char(0x00), char(0x69), char(0x00), char(0x00), char(0x00), char(0x6e),
+    char(0x00), char(0x00), char(0x00), char(0x65), char(0x00), char(0x00),
+    char(0x00), char(0x20), char(0x00), char(0x00), char(0x00), char(0x74),
+    char(0x00), char(0x00), char(0x00), char(0x65), char(0x00), char(0x00),
+    char(0x00), char(0x61), char(0x00), char(0x00), char(0x00), char(0xa0)     
   };
   const ext_type* 	e_lit = reinterpret_cast<ext_type*>(e_lit_base);
 
   char  i_lit_base[48] __attribute__((aligned(__alignof__(int_type)))) = 
   { 
-    0x00, 0x62, 0x00, 0x6c, 0x00, 0x61, 0x00, 0x63, 0x00, 0x6b, 0x00, 0x20,
-    0x00, 0x70, 0x00, 0x65, 0x00, 0x61, 0x00, 0x72, 0x00, 0x6c, 0x00, 0x20,
-    0x00, 0x6a, 0x00, 0x61, 0x00, 0x73, 0x00, 0x6d, 0x00, 0x69, 0x00, 0x6e,
-    0x00, 0x65, 0x00, 0x20, 0x00, 0x74, 0x00, 0x65, 0x00, 0x61, 0x00, 0xa0 
+    char(0x00), char(0x62), char(0x00), char(0x6c), char(0x00), char(0x61),
+    char(0x00), char(0x63), char(0x00), char(0x6b), char(0x00), char(0x20),
+    char(0x00), char(0x70), char(0x00), char(0x65), char(0x00), char(0x61),
+    char(0x00), char(0x72), char(0x00), char(0x6c), char(0x00), char(0x20),
+    char(0x00), char(0x6a), char(0x00), char(0x61), char(0x00), char(0x73),
+    char(0x00), char(0x6d), char(0x00), char(0x69), char(0x00), char(0x6e),
+    char(0x00), char(0x65), char(0x00), char(0x20), char(0x00), char(0x74),
+    char(0x00), char(0x65), char(0x00), char(0x61), char(0x00), char(0xa0) 
   };
   const int_type* 	i_lit = reinterpret_cast<int_type*>(i_lit_base);
 
